[package]
name = "libts"
version = "0.1.0"
description = "Trade System library"
authors = [ "Jesse Kuang <jkuang@21cn.com>" ]
# license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[profile.release]
strip = "debuginfo"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.4"
# lazy_static = "1.4"

[dev-dependencies]
bencher = "0.1"

[dependencies.simple_logger]
version = "2.1"
default-features = false
features = ["timestamps", "colors"]

[features]
default = [ ]
asm = []
tsc = []

[[bench]]
name = "test"
harness = false
